Fix application properties update0101